fix: Button line-height, Table dark mode (#45)
* fix(Button): fix line hieght and clean up unused css vars

* fix(Table): dark mode support

* Update TableHeaderCell.module.scss

--- a/src/components/Table/TableBody/TableBodyCell/TableBodyCell.module.scss
+++ b/src/components/Table/TableBody/TableBodyCell/TableBodyCell.module.scss
@@ -1,19 +1,16 @@
 .table-cell {
-  border-color: var(--table-border-color, var(--INTERNAL_table-border-color));
+  border-color: var(--color-border-default);
   border-bottom-style: solid;
-  border-width: 0 0 var(--table-header-border-width, var(--INTERNAL_table-header-border-width)) 0;
-  color: var(--table-font-color, var(--INTERNAL_table-font-color));
-  font-size: var(--table-font-size, var(--INTERNAL_table-font-size));
-  padding: var(--table-padding-vertical, var(--INTERNAL_table-padding-vertical))
-    var(--table-padding-horizontal, var(--INTERNAL_table-padding-horizontal));
+  border-width: 0 0 var(--size-border-width-sm) 0;
+  color: var(--color-font-base);
+  padding: var(--size-spacing-md) var(--size-spacing-lg);
 
   &.borderless {
     border-width: 0;
   }
 
   &.compact {
-    padding: var(--table-compact-padding-vertical, var(--INTERNAL_table-compact-padding-vertical))
-      var(--table-compact-padding-horizontal, var(--INTERNAL_table-compact-padding-horizontal));
+    padding: var(--size-spacing-sm) var(--size-spacing-md);
   }
 
   &.truncated {
@@ -23,20 +20,21 @@
   }
 
   &.sticky-column-left {
-    background-color: var(--table-background-color, var(--INTERNAL_table-background-color));
+    background-color: var(--color-background-primary);
     left: 0;
   }
 
   &.sticky-column-right {
-    background-color: var(--table-background-color, var(--INTERNAL_table-background-color));
+    background-color: var(--color-background-primary);
     right: 0;
   }
 
   &.sticky-column {
     position: sticky;
     z-index: calc(var(--size-z-index-sticky) - 1);
-    background-color: var(--table-background-color, var(--INTERNAL_table-background-color));
-    box-shadow: 5px 0 5px -2px rgb(0 0 0 / 10%), -5px 0 5px -2px rgb(0 0 0 / 10%);
+    background-color: var(--color-background-primary);
+    box-shadow: 5px 0 5px -2px rgb(0 0 0 / 10%),
+      -5px 0 5px -2px rgb(0 0 0 / 10%);
   }
 
   &.align-right {
